syntax = "proto3";

package ir.sndu.server;
import "scalapb/scalapb.proto";

enum PeerType{
    PRIVATE = 0;
    GROUP = 1;
    CHANNEL = 2;
}

message Peer {
    int32 peer_id = 1;
    PeerType peer_tpe = 2;
}


message UserCommands {
    message SendMessage {
        option (scalapb.message).extends = "ir.sndu.server.user.UserCommand";
        int32 user_id = 1;
        Peer peer = 2;
    }
}

message UserQueries {
    message GetState {
        int32 user_id = 1;
    }
}

message UserEnvelope {
    int32 user_id = 1;
    oneof command {
        UserCommands.SendMessage send_message = 2;
    }
    oneof query {
        UserQueries.GetState get_state = 3;
    }
}


